--- a/cadastro.html
+++ b/cadastro.html
@@ -1,8 +1,53 @@
-<br><br>
-
-<ul>
-    <li>tste</li>
-    <li>tstet2</li>
-</ul>
-
-Tesdasasd
+<div id="cadastro">
+    <form action="">
+        <div>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Nome</th>
+                        <th>Unidade de Medida</th>
+                        <th>Quantidade</th>
+                        <th>Preço</th>
+                        <th>Perecível</th>
+                        <th>Validade</th>
+                        <th>Fabricação</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>
+                            <input type="text" pattern="[A-Za-z]{1,50}" value="Nome" required>
+                        </td>
+                        <td>                        
+                            <select name="" id="">
+                                <option value="">Litro</option>
+                                <option value="">Quilograma</option>
+                                <option value="">Unidade</option>
+                            </select>
+                        </td>
+                        <td>
+                            <input type="number" min="1" step="1" pattern="\d*" value="" required>
+                        </td>
+                        <td>
+                            <input type="number" min="0.01" step="0.01" value="25.67">
+                        </td>
+                        <td>
+                            <input type="checkbox" name="" id="">
+                        </td>
+                        <td>
+                            <input type="date" name="" id="" value="1979-12-31">
+                        </td>
+                        <td>
+                            <input type="date" name="" id="" value="1979-12-31">
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+        
+        <div>
+            <input type="submit" value="Salvar">
+            <input type="button" value="Cancelar">
+        </div>
+    </form>
+</div>
