--- a/cadastro.html
+++ b/cadastro.html
@@ -19,17 +19,19 @@
                             <input type="text" pattern="[A-Za-z]{1,50}" value="Nome" required>
                         </td>
                         <td>                        
-                            <select name="" id="">
-                                <option value="">Litro</option>
-                                <option value="">Quilograma</option>
-                                <option value="">Unidade</option>
+                            <select onchange="quantidadeConfigurar(this.value)" required>
+                                <option value="" selected disabled>Selecione</option>
+                                <option value="1">Litro</option>
+                                <option value="2">Quilograma</option>
+                                <option value="3">Unidade</option>
                             </select>
                         </td>
                         <td>
-                            <input type="number" min="1" step="1" pattern="\d*" value="" required>
+                            <input type="number" id="quantidade" min="1" step="1" pattern="\d*" required value="0">
+                            <input type="text" id="unidadeAbreviatura" disabled required>
                         </td>
                         <td>
-                            <input type="number" min="0.01" step="0.01" value="25.67">
+                            <input type="number" min="0.01" step="0.01" value="25.67" required>
                         </td>
                         <td>
                             <input type="checkbox" name="" id="">
