--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 <body>
     <div class="row">
-        <div id="menu">
+        <div class="menu">
             <h2>Itens</h2>
             <ul style="line-height:3.6rem">
                 <li>
@@ -42,7 +42,7 @@
                 </li>
             </ul>
         </div>
-        <div id="conteudo">
+        <div class="conteudo">
             <h3>Bem vindo ao Desafio Front-End!</h3>
             <br>
             <h5>Selecione um item no menu</h5>
