--- a/listagem.html
+++ b/listagem.html
@@ -55,11 +55,18 @@
                             <th>Perecível</th>
                             <th>Validade</th>
                             <th>Fabricação</th>
+                            <th>Ações</th>
                         </tr>
                     </thead>
                     <tbody id="itensTabelaCorpo"></tbody>
                 </table>
-            </div>            
+                <br>
+                <div>
+                    <a href="cadastro.html">
+                        <input type="button" value="Adicionar um item">
+                    </a>
+                </div>
+            </div>
         </div>
     </div>
 </body>
