--- a/editar.html
+++ b/editar.html
@@ -27,7 +27,7 @@
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/menu.css">
     <link rel="stylesheet" href="css/cadastro.css">
-    <script src="js/cadastroConfig.js"></script>
+    <script src="js/editarConfig.js"></script>
 </head>
 
 <body>
