--- a/cadastro.html
+++ b/cadastro.html
@@ -5,98 +5,88 @@
     <title>Desafio Front</title>
     <meta charset="UTF-8">
     <meta name="description" content="Desafio Front-End, construir uma aplicação web para realizar o cadastro de itens. ">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <!-- Latest compiled and minified CSS -->
-    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"> -->
-
-    <!-- Optional theme -->
-    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous"> -->
-
-    <!-- Latest compiled and minified JavaScript -->
-    <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script> -->
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
     <!-- jQuery -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="js/jquery.min.js"></script>
     <script src="js/validacaoCampoMonetario.js"></script>
 
-    <!-- fonte -->
-    <link rel="stylesheet" href="css/fontes/roboto.css">
+    <!-- Última compilação e minificada do CSS do bootstrap -->
+    <link rel="stylesheet" href="css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+    <!-- Última compilação e minificada do javascript do bootstrap -->
+    <script src="js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
     <!-- styles -->
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/menu.css">
-    <link rel="stylesheet" href="css/cadastro.css">
     <script src="js/cadastroConfig.js"></script>
 </head>
 
 <body>
-    <div class="row">
-        <div class="menu">
-            <h2>Itens</h2>
-            <ul style="line-height:3.6rem">
-                <li>
-                    <a href="cadastro.html">Cadastro</a>
-                </li>
-                <li>
-                    <a href="listagem.html">Listagem</a>
-                </li>
-            </ul>
-        </div>
-        <div class="conteudo">
-            <div name="cadastro">
-                <form name="cadastroFormulario" onsubmit="serializar()" action="listagem.html" method="GET">
-                    <div>
-                        <table>
-                            <thead>
-                                <tr>
-                                    <th>Nome</th>
-                                    <th>Unidade de Medida</th>
-                                    <th>Quantidade</th>
-                                    <th>Preço</th>
-                                    <th>Perecível</th>
-                                    <th>Validade</th>
-                                    <th>Fabricação</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr>
-                                    <td>
-                                        <input name="nomeDoItem" type="text" pattern="[A-Za-z\s]{1,50}" placeholder="Nome do item" required>
-                                    </td>
-                                    <td>
-                                        <select name="unidadeMedida" onchange="quantidadeConfigurar(this.value)" required>
-                                            <option value="" selected disabled>Selecione</option>
-                                            <option value="1">Litro</option>
-                                            <option value="2">Quilograma</option>
-                                            <option value="3">Unidade</option>
-                                        </select>
-                                    </td>
-                                    <td>
-                                        <input name="quantidade" type="number" min="1" step="1" pattern="\d*" placeholder="0" required>
-                                        <input name="unidadeAbreviatura" type="text" readonly required>
-                                    </td>
-                                    <td>
-                                        <input name="preco" type="text" data-thousands="." data-decimal="," data-prefix="R$ " onkeydown="mascarar()" required>
-                                    </td>
-                                    <td>
-                                        <input name="perecivel" type="checkbox" onchange="validadeObrigatoria(this.checked)">
-                                    </td>
-                                    <td>
-                                        <input name="validade" type="date" onchange="limitarDataFabricação();if(dataInferior()) produtoVencido()">
-                                    </td>
-                                    <td>
-                                        <input name="fabricacao" type="date" required>
-                                    </td>
-                                </tr>
-                            </tbody>
-                        </table>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-2 menu ">
+                <h3>Menu</h3>
+                <hr>
+                <div class="btn-group-vertical"> 
+                    <a href="cadastro.html" class="btn btn-default" role="button">Cadastro</a>
+                    <a href="listagem.html" class="btn btn-default" role="button">Listagem</a>
+                </div>
+            </div>
+            <div class="col-md-10">
+                <h3>Cadastro de Item</h3>
+                <hr>
+                <form class="form" name="cadastroFormulario" onsubmit="serializar()" action="listagem.html" method="GET">
+
+                    <div class="form-group">
+                        <label class="">Nome</label>
+                        <input class="form-control"  name="nomeDoItem" type="text" pattern="[A-Za-z\s.áéíóúÁÉÍÓÚ]{1,50}" placeholder="Lápis" required>
                     </div>
+
+                    <div class="form-group">
+                        <label class="">Unidade de Medida</label>
+                        <select class="form-control" name="unidadeMedida" onchange="quantidadeConfigurar(this.value)" required>
+                            <option value="" selected disabled>Selecione</option>
+                            <option value="1">Litro</option>
+                            <option value="2">Quilograma</option>
+                            <option value="3">Unidade</option>
+                        </select>
+                    </div>
+                    
+                    <div class="form-group">
+                        <label class="">Quantidade</label>
+                        <div>
+                            <input type="text" style="display:inline;width:90%" class="form-control" name="quantidade">
+                            <input type="text" style="display:inline;width:9%;text-align:center" class="form-control" name="unidadeAbreviatura" readonly>
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <label class="">Preço</label>
+                        <input class="form-control"  name="preco" type="text" data-thousands="." data-decimal="," data-prefix="R$" onkeydown="mascarar()" required>
+                    </div>
+
+                    <div class="form-group">
+                        <label class="">Perecível</label>
+                        <input name="perecivel" type="checkbox" onchange="validadeObrigatoria(this.checked)">
+                    </div>
+
+                    <div class="form-group">
+                        <label class="">Validade</label>
+                        <input class="form-control" name="validade" type="date" onchange="limitarDataFabricacao();if(dataInferior()) produtoVencido()">
+                    </div>
+
+                    <div class="form-group">
+                        <label class="">Fabricação</label>
+                        <input class="form-control" name="fabricacao" type="date" required>
+                    </div>
+
+                    <hr>
+
                     <div>
-                        <input type="submit" value="Salvar">
-                        <a href="listagem.html">
-                            <input type="button" value="Cancelar">
-                        </a>
+                        <input class="btn btn-success" type="submit" value="Cadastrar">
+                        <a href="listagem.html" class="btn btn-danger pull-right">Cancelar</a>
                     </div>
                 </form>
             </div>
